# cpp_experiments

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: AddGoogleTest.cmake  prjlib.cmake  prjqt.cmake  prjstandardpost.cmake  prjtest.cmake
data/: emvis1000.desktop
docs/: Changelog.md
src/: CMakeLists.txt
src/ar_history_search_qt/: CMakeLists.txt  ar_history_search.cpp  ar_history_search.h  main.cpp
src/arhelper_qt/: CMakeLists.txt  arhelper.cpp  arhelper.h
src/elementary_math_qml/: CMakeLists.txt  Vis_1000.qml  vis_1000.cpp  vis_1000.h  vis_1000.qrc
src/emvis1000_qml/: CMakeLists.txt  emvis1000wasm.pro  main.cpp
src/fs_filter_qt/: CMakeLists.txt  fs_filter.cpp  fs_filter.h
src/fs_history_qt/: CMakeLists.txt  fs_history.cpp  fs_history.h  fs_history_ui.cpp  fs_history_ui.h
src/fs_history_search_qt/: CMakeLists.txt  fs_history_search.cpp  fs_history_search.h  main.cpp
src/qt_utilities/: CMakeLists.txt  caching_file_icon_provider.cpp  caching_file_icon_provider.hpp  clear_layout.cpp  clear_layout.hpp  combobox_label_elide_left_proxy_style.cpp  combobox_label_elide_left_proxy_style.h  flowlayout.cpp  flowlayout.h  tableview_adjust_row_visibility.cpp  tableview_adjust_row_visibility.h  tableview_resizecolumnstocontents_maxpercent.cpp  tableview_resizecolumnstocontents_maxpercent.h  treeview_hide_expand.cpp  treeview_hide_expand.h
src/qtableview_demo/: CMakeLists.txt  main.cpp  qtableview_demo.cpp  qtableview_demo.h
src/sdl/: CMakeLists.txt  main.cpp  sdlapp.cpp  sdlapp.h
src/tiddler_inspector_qt/: CMakeLists.txt  main.cpp  tiddler_inspector_qt.cpp  tiddler_inspector_qt.h
src/tiddlerstore/: CMakeLists.txt  tiddlerstore.cpp  tiddlerstore.h  tiddlerstore_types.cpp  tiddlerstore_types.h
src/tiddlerstore_qt/: CMakeLists.txt  tiddler_model_qt.cpp  tiddler_model_qt.h  tiddler_pure_edit_qt.cpp  tiddler_pure_edit_qt.h  tiddler_pure_view_qt.cpp  tiddler_pure_view_qt.h  tiddlerstore_handler_qt.cpp  tiddlerstore_handler_qt.h
src/tiddlerstore_ui_qt/: CMakeLists.txt  main.cpp  tiddlerstore_ui_qt.cpp  tiddlerstore_ui_qt.h
tests/: CMakeLists.txt
tests/elementary_math_qml/: CMakeLists.txt  vis_1000.test.cpp  vis_1000.test.h
tests/fs_filter_qt/: CMakeLists.txt  fs_filter.test.cpp  fs_filter.test.h
tests/fs_history_qt/: CMakeLists.txt  fs_history.test.cpp  fs_history.test.h  fs_history_ui.test.cpp  fs_history_ui.test.h
tests/qt_gtest_helper/: CMakeLists.txt  qt_gtest_helper.cpp  qt_gtest_helper.h
tests/tiddlerstore/: CMakeLists.txt  tiddlerstore.test.cpp  tiddlerstore.test.h
tests/tiddlerstore_qt/: CMakeLists.txt  tiddler_model_qt.test.cpp  tiddler_model_qt.test.h
tools/: appimage_helper.sh
